2013-04-05  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m: Fix to get 'control on <host> ...' to work while
        connected to a specific server.

2013-03-22: Niels Grewe <niels.grewe@halbordnung.de>

	* EcControl.m: Fix bug that could remove a alerter when it was still
	needed.

2013-03-18: Niels Grewe <niels.grewe@halbordnung.de>

	* EcAlerter.h
	* EcAlerter.m:
	Rearrange and expose a few methods so that subclasses can
	easily inject alert rules.
	* EcControl.m:
	Allow dynamically loading the alerter class based on the
	AlerterBundle key in AlertConfig.plist

2013-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Add test logging methods ([-ecTestLog:...])

2013-03-15  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h: Document EcCoreSize
	* EcProcess.m: Change so that if no value is set, we don't use any
        limit, and so that if a negative value is set we use 1GB

2013-03-13  Richard Frith-Macdonald <rfm@gnu.org>

        * GNUmakefile: 1.0.2 release

2013-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
        Improve documentation of sequence of calls of configuration update
        methods and add convenience functionality to support alarming for
        fatal configuration errors.
        Add EcMemoryIncrement config to adjust alerting about potential leaks.

2013-01-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.m:
	* EcAlarmSinkSNMP.m: Fix problem flushing alarms on process shutdown.

2012-12-17  Niels Grewe <niels.grewe@halbordnung.de>

	* EcAlarmDestination.m: Fix designated initializer behaviour.
	* EcControl.m: Make SNMP master agent port and host configurable.

2012-12-07  Richard Frith-Macdonald <rfm@gnu.org>

        * EcAlarmSinkSNMP.m:
        * GNUSTEP-MIB.txt:
        Fix minor naming consistency errors.

2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m: Improve handling of signals ... quit process after the